Mobile navbar updated, locations heading responsive across all screens

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         <video src="assets/images/training-video.mp4" alt="Training video" muted autoplay loop></video>
       </section>
       <section class="locations">
-        <h1><span>L</span>ocations</h1>
-        <img class="tricolor" src="assets/images/tricolor_underline.jpg" alt="" />
+        <div class="scale">
+          <h1><span>L</span>ocations</h1>
+          <img class="tricolor" src="assets/images/tricolor_underline.jpg" alt="" />
+        </div>
       </section>
     </main>
     <footer></footer>
