First location in progress, testing font options

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         <button class="navbar-toggler toggler-bg-color" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse load-fix navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <!-- add active classes when visiting different pages -->
             <li class="nav-item">
               <a class="nav-link orange-navlink-divide" href="#">About </a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link orange-navlink-divide" href="#">Memberships</a>
             </li>
@@ -42,6 +43,19 @@
         <div class="scale">
           <h1><span>L</span>ocations</h1>
           <img class="tricolor" src="assets/images/tricolor_underline.jpg" alt="" />
+        </div>
+        <div class="location1">
+          <div class="location-text">
+            <h1>Dublin City Center</h1>
+            <p>
+              Size: small <br />
+              Address: 15 Westmoreland Street <br />
+              Working hours: 8:00 - 20:00 <br />
+              Contact number: (01) 544 6721
+            </p>
+          </div>
+          <img class="desktop-blue" src="assets/images/blue-location.png" alt="" />
+          <img class="mobile-blue" src="assets/images/blue-location-mobile.jpg" />
         </div>
       </section>
     </main>
