Location section finished, fully  responsive

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <img class="tricolor" src="assets/images/tricolor_underline.jpg" alt="" />
         </div>
         <div class="location1">
-          <div class="location-text">
+          <div class="location-text-left">
             <h1>Dublin City Center</h1>
             <p>
               Size: small <br />
@@ -54,8 +54,34 @@
               Contact number: (01) 544 6721
             </p>
           </div>
-          <img class="desktop-blue" src="assets/images/blue-location.png" alt="" />
-          <img class="mobile-blue" src="assets/images/blue-location-mobile.jpg" />
+          <img class="desktop-location-right" src="assets/images/blue-location.png" alt="" />
+          <img class="mobile-location-img" src="assets/images/blue-location-mobile.jpg" />
+        </div>
+        <div class="location2">
+          <div class="location-text-right">
+            <h1>Dublin City Center</h1>
+            <p>
+              Size: medium <br />
+              Address: 15 Westmoreland Street <br />
+              Working hours: 8:00 - 20:00 <br />
+              Contact number: (01) 544 6721
+            </p>
+          </div>
+          <img class="desktop-location-left" src="assets/images/orange-location.png" alt="" />
+          <img class="mobile-location-img" src="assets/images/orange-location-mobile.png" />
+        </div>
+        <div class="location3">
+          <div class="location-text-left">
+            <h1>Dublin City Center</h1>
+            <p>
+              Size: large <br />
+              Address: 15 Westmoreland Street <br />
+              Working hours: 8:00 - 20:00 <br />
+              Contact number: (01) 544 6721
+            </p>
+          </div>
+          <img class="desktop-location-right" src="assets/images/yellow-location.png" alt="" />
+          <img class="mobile-location-img" src="assets/images/yellow-location-mobile.png" />
         </div>
       </section>
     </main>
