--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -54,7 +55,7 @@
               Contact number: (01) 544 6721
             </p>
           </div>
-          <img class="desktop-location-right" src="assets/images/blue-location.png" alt="" />
+          <img class="desktop-location-right" src="assets/images/blue-location.jpg" alt="" />
           <img class="mobile-location-img" src="assets/images/blue-location-mobile.jpg" />
         </div>
         <div class="location2">
@@ -67,8 +68,8 @@
               Contact number: (01) 544 6721
             </p>
           </div>
-          <img class="desktop-location-left" src="assets/images/orange-location.png" alt="" />
-          <img class="mobile-location-img" src="assets/images/orange-location-mobile.png" />
+          <img class="desktop-location-left" src="assets/images/orange-location.jpg" alt="" />
+          <img class="mobile-location-img" src="assets/images/orange-location-mobile.jpg" />
         </div>
         <div class="location3">
           <div class="location-text-left">
@@ -80,8 +81,8 @@
               Contact number: (01) 544 6721
             </p>
           </div>
-          <img class="desktop-location-right" src="assets/images/yellow-location.png" alt="" />
-          <img class="mobile-location-img" src="assets/images/yellow-location-mobile.png" />
+          <img class="desktop-location-right" src="assets/images/yellow-location.jpg" alt="" />
+          <img class="mobile-location-img" src="assets/images/yellow-location-mobile.jpg" />
         </div>
       </section>
     </main>
