--- a/index.html
+++ b/index.html
@@ -1,107 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>King Gym</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="description"
-		content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training." />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-	<link rel="stylesheet" href="assets/css/style.css" />
-	<title>King Gym</title>
-</head>
-
-<body>
-	<header>
-		<div class="nav-bg-color"></div>
-		<nav class="navbar fixed-top navbar-expand-md navbar-light">
-			<a class="navbar-brand logo" href="#">
-				<img src="assets/images/logo.png" alt="Gym logo" />
+  <body>
+    <header>
+      <div class="nav-bg-color"></div>
+      <nav class="navbar fixed-top navbar-expand-md navbar-light">
+        <a class="navbar-brand logo" href="#">
+          <img src="assets/images/logo.png" alt="Gym logo" />
         </a>
-				<button class="navbar-toggler toggler-bg-color" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler toggler-bg-color" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-				<div class="collapse load-fix navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav">
-						<!-- add active classes when visiting different pages -->
-						<li class="nav-item">
-							<a class="nav-link orange-navlink-divide" href="#">Join us</a>
-						</li>
+        <div class="collapse load-fix navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <!-- add active classes when visiting different pages -->
+            <li class="nav-item">
+              <a class="nav-link orange-navlink-divide" href="#">Join us</a>
+            </li>
 
-						<li class="nav-item">
-							<a class="nav-link orange-navlink-divide" href="#">Memberships</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Contact</a>
-						</li>
-					</ul>
-				</div>
-		</nav>
-	</header>
-	<main>
-		<section class="training-video">
-			<video src="assets/images/training-video.mp4" alt="Training video" muted autoplay loop></video>
-			<div class="video-overlay">
-				<h1>Welcome to King Gym</h1>
-				<p> Train like a king!</p>
-				<button class="uppercase training-button">book a <br> free training</button>
-			</div>
-		</section>
-
-		<section class="locations">
-			<div class="scale">
-				<h1><span>L</span>ocations</h1>
-				<img class="tricolor" src="assets/images/tricolor_underline.jpg" alt="" />
+            <li class="nav-item">
+              <a class="nav-link orange-navlink-divide" href="#">Memberships</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
         </div>
-				<div class="location1">
-					<div class="location-text-left">
-						<h1>Dublin City Center</h1>
-						<p>
-							Size: small <br />
+      </nav>
+    </header>
+    <main>
+      <section class="training-video">
+        <video src="assets/images/training-video.mp4" alt="Training video" muted autoplay loop></video>
+        <div class="video-overlay">
+          <h1>Welcome to King Gym</h1>
+          <div>
+            <div class="line1"></div>
+            <p class="tagline">Train like a king!</p>
+            <div class="line2"></div>
+          </div>
+          <button class="uppercase training-button">book a free training</button>
+        </div>
+      </section>
+
+      <section class="locations">
+        <div class="scale">
+          <h1><span>L</span>ocations</h1>
+          <img class="tricolor" src="assets/images/tricolor_underline.jpg" alt="" />
+        </div>
+        <div class="location1">
+          <div class="location-text-left">
+            <h1>Dublin City Center</h1>
+            <p>
+              Size: small <br />
               Address: 15 Westmoreland Street <br />
               Working hours: 8:00 - 20:00 <br />
               Contact number: (01) 544 6721
             </p>
-					</div>
-					<img class="desktop-location-right" src="assets/images/blue-location.jpg" alt="" />
-					<img class="mobile-location-img" src="assets/images/blue-location-mobile.jpg" />
+          </div>
+          <img class="desktop-location-right" src="assets/images/blue-location.jpg" alt="" />
+          <img class="mobile-location-img" src="assets/images/blue-location-mobile.jpg" />
         </div>
-					<div class="location2">
-						<div class="location-text-right">
-							<h1>Dublin City Center</h1>
-							<p>
-								Size: medium <br />
+        <div class="location2">
+          <div class="location-text-right">
+            <h1>Dublin City Center</h1>
+            <p>
+              Size: medium <br />
               Address: 15 Westmoreland Street <br />
               Working hours: 8:00 - 20:00 <br />
               Contact number: (01) 544 6721
             </p>
-						</div>
-						<img class="desktop-location-left" src="assets/images/orange-location.jpg" alt="" />
-						<img class="mobile-location-img" src="assets/images/orange-location-mobile.jpg" />
+          </div>
+          <img class="desktop-location-left" src="assets/images/orange-location.jpg" alt="" />
+          <img class="mobile-location-img" src="assets/images/orange-location-mobile.jpg" />
         </div>
-						<div class="location3">
-							<div class="location-text-left">
-								<h1>Dublin City Center</h1>
-								<p>
-									Size: large <br />
+        <div class="location3">
+          <div class="location-text-left">
+            <h1>Dublin City Center</h1>
+            <p>
+              Size: large <br />
               Address: 15 Westmoreland Street <br />
               Working hours: 8:00 - 20:00 <br />
               Contact number: (01) 544 6721
             </p>
-							</div>
-							<img class="desktop-location-right" src="assets/images/yellow-location.jpg" alt="" />
-							<img class="mobile-location-img" src="assets/images/yellow-location-mobile.jpg" />
+          </div>
+          <img class="desktop-location-right" src="assets/images/yellow-location.jpg" alt="" />
+          <img class="mobile-location-img" src="assets/images/yellow-location-mobile.jpg" />
         </div>
-		</section>
-	</main>
-	<footer></footer>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-	</script>
-</body>
-
+      </section>
+    </main>
+    <footer></footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  </body>
 </html>
