--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="description" content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <script src="https://kit.fontawesome.com/69b2179d00.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>King Gym</title>
   </head>
 
   <body>
     <header>
+      <!-- navbar -->
       <div class="nav-bg-color"></div>
       <nav class="navbar fixed-top navbar-expand-md navbar-light">
         <a class="navbar-brand logo" href="#">
@@ -37,8 +39,10 @@
       </nav>
     </header>
     <main>
+      <!-- video section -->
       <section class="training-video">
         <video src="assets/images/training-video.mp4" alt="Training video" muted autoplay loop></video>
+        <!-- video overlay -->
         <div class="video-overlay">
           <h1>Welcome to King Gym</h1>
           <div>
@@ -46,10 +50,10 @@
             <p class="tagline">Train like a king!</p>
             <div class="line2"></div>
           </div>
-          <button class="uppercase training-button">book a free training</button>
+          <button class="training-button grow">book a free training</button>
         </div>
       </section>
-
+      <!-- location section -->
       <section class="locations">
         <div class="scale">
           <h1><span>L</span>ocations</h1>
