--- a/index.html
+++ b/index.html
@@ -18,13 +18,35 @@
           <div class="modal-header">
             <h5 class="modal-title" id="trainingModalLabel">Book a free training session</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
+              <span class="close-modal" aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">Try out our gym equipment for a day, no comitments. Just fill the form below and you're all set.</div>
+          <div class="modal-body">
+            <p>Try out our gym equipment for a day, no comitments. Just fill the form below and you're all set.</p>
+            <hr class="modal-hr" />
+          </div>
+
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <form class="container" enctype="multipart/form-data" action="mailto: king_gym@gmail.com" method="POST">
+              <div class="row">
+                <div class="col-sm-6">
+                  <label for="fname">First name:</label> <br />
+                  <input type="text" name="fname" id="fname" required />
+                </div>
+                <div class="col-sm-6">
+                  <label for="lname">Last name:</label> <br />
+                  <input type="text" name="lname" id="lname" required />
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <label for="email">Email address:</label> <br />
+                  <input type="email" name="email" id="email" required />
+                </div>
+              </div>
+              <br />
+              <button type="submit" class="btn">Send</button>
+            </form>
           </div>
         </div>
       </div>
@@ -71,6 +93,7 @@
           <button class="training-button" data-toggle="modal" data-target="#trainingModal">book a free training</button>
         </div>
       </section>
+      <!-- about section -->
       <section class="about">
         <div class="scale">
           <h1 class="about-headline"><span>A</span>bout us</h1>
@@ -121,6 +144,12 @@
           </div>
           <img class="desktop-location-right" src="assets/images/yellow-location.jpg" alt="" />
           <img class="mobile-location-img" src="assets/images/yellow-location-mobile.jpg" />
+        </div>
+      </section>
+      <section class="testimonials">
+        <div class="scale">
+          <h1 class="testimonials-headline"><span>T</span>estimonials</h1>
+          <img class="tricolor testimonials-tricolor" src="assets/images/tricolor_underline.jpg" alt="" />
         </div>
       </section>
     </main>
