--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training." />
+    <meta
+      name="description"
+      content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <script src="https://kit.fontawesome.com/69b2179d00.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>King Gym</title>
@@ -22,12 +30,13 @@
             </button>
           </div>
           <div class="modal-body">
-            <p>Try out our gym equipment for a day, no comitments. Just fill the form below and you're all set.</p>
+            <p>Try out our gym equipment for a day, no comitments. Just fill out the form below and you're all set.</p>
             <hr class="modal-hr" />
           </div>
 
           <div class="modal-footer">
-            <form class="container" enctype="multipart/form-data" action="mailto: king_gym@gmail.com" method="POST">
+            <!-- modal form -->
+            <form class="container">
               <div class="row">
                 <div class="col-sm-6">
                   <label for="fname">First name:</label> <br />
@@ -58,7 +67,15 @@
         <a class="navbar-brand logo" href="#">
           <img src="assets/images/logo.png" alt="Gym logo" />
         </a>
-        <button class="navbar-toggler toggler-bg-color" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler toggler-bg-color"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse load-fix navbar-collapse" id="navbarSupportedContent">
@@ -97,14 +114,46 @@
       <section class="about">
         <div class="scale">
           <h1 class="about-headline"><span>A</span>bout us</h1>
-          <img class="tricolor about-tricolor" src="assets/images/tricolor_underline.jpg" alt="" />
+          <img class="tricolor about-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
+        </div>
+        <div class="container-fluid about-container">
+          <div class="row align-items-center">
+            <div class="col-lg-6">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+            <div class="col-lg-6 icon-column">
+              <div class="row">
+                <figure class="col-sm-6 col-md-3 col-lg-6">
+                  <img class="icon" src="assets/images/personal-trainer.png" alt="Personal trainer icon" />
+                  <figcaption>Personal trainers available</figcaption>
+                </figure>
+                <figure class="col-sm-6 col-md-3 col-lg-6">
+                  <img class="icon" src="assets/images/gym-equipment.png" alt="Gym equipment icon" />
+                  <figcaption>High quality equipment, maintained daily</figcaption>
+                </figure>
+                <figure class="col-sm-6 col-md-3 col-lg-6">
+                  <img class="icon" src="assets/images/check-list.png" alt="Checklist icon" />
+                  <figcaption>Free personalised training checklist</figcaption>
+                </figure>
+                <figure class="col-sm-6 col-md-3 col-lg-6">
+                  <img class="icon" src="assets/images/lockers.png" alt="Gym lockers icon" />
+                  <figcaption>Secure gym lockers</figcaption>
+                </figure>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- location section -->
       <section class="locations">
         <div class="scale">
           <h1><span>L</span>ocations</h1>
-          <img class="tricolor" src="assets/images/tricolor_underline.jpg" alt="" />
+          <img class="tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
         </div>
         <div class="location1">
           <div class="location-text-left">
@@ -117,7 +166,7 @@
             </p>
           </div>
           <img class="desktop-location-right" src="assets/images/blue-location.jpg" alt="" />
-          <img class="mobile-location-img" src="assets/images/blue-location-mobile.jpg" />
+          <img class="mobile-location-img" src="assets/images/blue-location-mobile.jpg" alt="" />
         </div>
         <div class="location2">
           <div class="location-text-right">
@@ -130,7 +179,7 @@
             </p>
           </div>
           <img class="desktop-location-left" src="assets/images/orange-location.jpg" alt="" />
-          <img class="mobile-location-img" src="assets/images/orange-location-mobile.jpg" />
+          <img class="mobile-location-img" src="assets/images/orange-location-mobile.jpg" alt="" />
         </div>
         <div class="location3">
           <div class="location-text-left">
@@ -143,18 +192,26 @@
             </p>
           </div>
           <img class="desktop-location-right" src="assets/images/yellow-location.jpg" alt="" />
-          <img class="mobile-location-img" src="assets/images/yellow-location-mobile.jpg" />
+          <img class="mobile-location-img" src="assets/images/yellow-location-mobile.jpg" alt="" />
         </div>
       </section>
       <section class="testimonials">
         <div class="scale">
           <h1 class="testimonials-headline"><span>T</span>estimonials</h1>
-          <img class="tricolor testimonials-tricolor" src="assets/images/tricolor_underline.jpg" alt="" />
+          <img class="tricolor testimonials-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
         </div>
       </section>
     </main>
     <footer></footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
