Main headlines responsive when browser font-size is changed, footer added.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
       <!-- about section -->
       <section class="about">
         <div class="scale">
-          <h1 class="about-headline"><span>A</span>bout us</h1>
-          <img class="tricolor about-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
+          <h1 class="about-headline">
+            <span>A</span>bout us
+            <img class="tricolor about-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
+          </h1>
         </div>
         <div class="container-fluid about-container">
           <div class="row align-items-center">
@@ -152,8 +154,10 @@
       <!-- location section -->
       <section class="locations">
         <div class="scale">
-          <h1><span>L</span>ocations</h1>
-          <img class="tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
+          <h1 class="locations-headline">
+            <span>L</span>ocations
+            <img class="locations-tricolor tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
+          </h1>
         </div>
         <div class="location1">
           <div class="location-text-left">
@@ -195,14 +199,29 @@
           <img class="mobile-location-img" src="assets/images/yellow-location-mobile.jpg" alt="" />
         </div>
       </section>
+      <!-- testimonials -->
       <section class="testimonials">
         <div class="scale">
-          <h1 class="testimonials-headline"><span>T</span>estimonials</h1>
-          <img class="tricolor testimonials-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
+          <h1 class="testimonials-headline">
+            <span>T</span>estimonials
+            <img class="tricolor testimonials-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
+          </h1>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="social-media">
+        <div class="group">
+          <h1>Stay in touch</h1>
+          <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+          <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+        </div>
+      </section>
+      <section class="copyright">
+        <p>© 2020 - King Gym All Rights Reserved</p>
+      </section>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
