Testimonial section in progress

--- a/index.html
+++ b/index.html
@@ -207,6 +207,46 @@
             <img class="tricolor testimonials-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
           </h1>
         </div>
+        <div class="container-fluid testimonials-container">
+          <div class="row justify-content-center">
+            <div class="col-md-3 testimonials-container">
+              <div class="circle">
+                <img class="customer1" src="assets/images/customer1.jpg" alt="" />
+              </div>
+              <div class="text">
+                <h1>Anna</h1>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-3 testimonials-container">
+              <div class="circle">
+                <img class="customer2" src="assets/images/customer2.jpg" alt="" />
+              </div>
+              <div class="text">
+                <h1>Jim</h1>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-3 testimonials-container">
+              <div class="circle">
+                <img class="customer3" src="assets/images/customer3.jpg" alt="" />
+              </div>
+              <div class="text">
+                <h1>Emma</h1>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
