Testimonial section finished, fully responsive

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </section>
       <!-- about section -->
       <section class="about">
-        <div class="scale">
+        <div class="headline-scale">
           <h1 class="about-headline">
             <span>A</span>bout us
             <img class="tricolor about-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
@@ -153,7 +153,7 @@
       </section>
       <!-- location section -->
       <section class="locations">
-        <div class="scale">
+        <div class="headline-scale">
           <h1 class="locations-headline">
             <span>L</span>ocations
             <img class="locations-tricolor tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
@@ -201,19 +201,19 @@
       </section>
       <!-- testimonials -->
       <section class="testimonials">
-        <div class="scale">
+        <div class="headline-scale">
           <h1 class="testimonials-headline">
             <span>T</span>estimonials
             <img class="tricolor testimonials-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
           </h1>
         </div>
-        <div class="container-fluid testimonials-container">
-          <div class="row justify-content-center">
-            <div class="col-md-3 testimonials-container">
+        <div class="container-fluid">
+          <div class="row scale-row">
+            <div class="col-md-12 col-lg-4 testimonials-container">
               <div class="circle">
                 <img class="customer1" src="assets/images/customer1.jpg" alt="" />
               </div>
-              <div class="text">
+              <div class="text double-border1">
                 <h1>Anna</h1>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -221,11 +221,11 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-3 testimonials-container">
+            <div class="col-md-6 col-lg-4 testimonials-container">
               <div class="circle">
                 <img class="customer2" src="assets/images/customer2.jpg" alt="" />
               </div>
-              <div class="text">
+              <div class="text double-border2">
                 <h1>Jim</h1>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -233,11 +233,11 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-3 testimonials-container">
+            <div class="col-md-6 col-lg-4 testimonials-container">
               <div class="circle">
                 <img class="customer3" src="assets/images/customer3.jpg" alt="" />
               </div>
-              <div class="text">
+              <div class="text double-border3">
                 <h1>Emma</h1>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
