Footer, gallery headline finished

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 				<h1 class="testimonials-headline">
 					<span>T</span>estimonials
 					<img class="tricolor testimonials-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
-          </h1>
+                </h1>
 			</div>
 			<div class="container-fluid">
 				<div class="row scale-row">
@@ -252,6 +252,14 @@
 								</div>
 							</div>
 						</div>
+		</section>
+		<section class="gallery">
+			<div class="headline-scale" id="gallery-scale">
+				<h1 class="gallery-headline">
+					<span>G</span>allery
+					<img class="tricolor gallery-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
+                </h1>
+			</div>
 		</section>
 	</main>
 	<footer>
