--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
 				<div class="row align-items-center">
 					<div class="col-lg-6">
 						<p>
-							We are a newly opened gym with high quality equipment in three Dublin locations.
-							You are welcome regardless of skill level.
-							Our dedicated team will be there to help you with anything you need.
-							There also is an option to receive a more personalised nutritional and workout plan from our
-							expert personal trainers.
-							Your membership includes access to any of our gyms.
-							Come visit _location_ which is our biggest location with a swimming pool. It's a great way
-							to relax after a workout.
-							If you are unsure, just book a free training and see how you like our gym experience.
+							We are a newly opened gym with high quality equipment in three Dublin locations. You are
+							welcome regardless of skill level.
+							Our dedicated team will be there to help you with anything you need. There also is an option
+							to receive a more personalised
+							nutritional and workout plan from our expert personal trainers. Your membership includes
+							access to any of our gyms. Come
+							visit _location_ which is our biggest location with a swimming pool. It's a great way to
+							relax after a workout. If you are
+							unsure, just book a free training and see how you like our gym experience.
 						</p>
 					</div>
 					<div class="col-lg-6 icon-column">
@@ -207,7 +207,7 @@
 				<h1 class="testimonials-headline">
 					<span>T</span>estimonials
 					<img class="tricolor testimonials-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
-                </h1>
+          </h1>
 			</div>
 			<div class="container-fluid">
 				<div class="row scale-row">
@@ -232,8 +232,9 @@
 									<h1>Jim</h1>
 									<p>
 										King Gym is the best gym I have ever visited. It has all the equipment that you
-										could ever need. Forget waiting for someone to finnish their set. The
-										_location_ even has a pool which is a great way to relax after a workout.
+										could ever need. Forget waiting for
+										someone to finnish their set. The _location_ even has a pool which is a great
+										way to relax after a workout.
 									</p>
 								</div>
 							</div>
@@ -253,13 +254,29 @@
 							</div>
 						</div>
 		</section>
+		<!-- gallery -->
 		<section class="gallery">
 			<div class="headline-scale" id="gallery-scale">
 				<h1 class="gallery-headline">
 					<span>G</span>allery
 					<img class="tricolor gallery-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
-                </h1>
+          </h1>
 			</div>
+
+			<div class="row gallery-container no-gutters">
+				<div class="col-md-6 col-xl-3">
+					<img class="img1" src="assets/images/img1.jpg" alt="" />
+          </div>
+					<div class="col-md-6 col-xl-4 mobile-gap">
+						<img class="img2" src="assets/images/img2.jpg" alt="" />
+						<img class="img3" src="assets/images/img3.jpg" alt="" />
+          </div>
+						<div class="col-md-12 col-xl-5">
+							<img class="img4" src="assets/images/img4.jpg" alt="" />
+							<img class="img5" src="assets/images/img5.jpg" alt="" />
+							<img class="img6" src="assets/images/img6.jpg" alt="" />
+          </div>
+						</div>
 		</section>
 	</main>
 	<footer>
@@ -284,3 +301,25 @@
 </body>
 
 </html>
+<!-- <div class="row">
+              <div class="col-3">
+                <img class="s1-img-left" src="assets/images/Try3.jpg" alt="" />
+              </div>
+              <div class="col-4">
+                <div class="row">
+                  <div class="col"><img class="s1-img-right" src="assets/images/Try2.jpg" alt="" /></div>
+                </div>
+                <div class="row">
+                  <div class="col"><img class="s1-img-right" src="assets/images/Try1.jpg" alt="" /></div>
+                </div>
+              </div>
+              <div class="col-5">
+                <div class="row">
+                  <div class="col-6"><img class="s1-img-right" src="assets/images/Try2.jpg" alt="" /></div>
+                  <div class="col-6"><img class="s1-img-right" src="assets/images/Try1.jpg" alt="" /></div>
+                </div>
+                <div class="row">
+                  <div class="col"><img class="s1-img-right" src="assets/images/Try2.jpg" alt="" /></div>
+                </div>
+              </div>
+            </div> -->
