All pages added, underlined when active

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <header>
       <!-- navbar -->
       <div class="nav-bg-color"></div>
-      <nav class="navbar fixed-top navbar-expand-md navbar-light">
-        <a class="navbar-brand logo" href="#">
+      <nav class="navbar transparent fixed-top navbar-expand-md navbar-light">
+        <a class="navbar-brand logo" href="index.html">
           <img src="assets/images/logo.png" alt="Gym logo" />
         </a>
         <button
@@ -80,16 +80,15 @@
         </button>
         <div class="collapse load-fix navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
-            <!-- add active classes when visiting different pages -->
             <li class="nav-item">
-              <a class="nav-link orange-navlink-divide" href="#">Join us</a>
+              <a class="nav-link orange-navlink-divide" href="join.html">Join us</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link orange-navlink-divide" href="#">Memberships</a>
+              <a class="nav-link orange-navlink-divide" href="memberships.html">Memberships</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -299,25 +298,3 @@
     ></script>
   </body>
 </html>
-<!-- <div class="row">
-              <div class="col-3">
-                <img class="s1-img-left" src="assets/images/Try3.jpg" alt="" />
-              </div>
-              <div class="col-4">
-                <div class="row">
-                  <div class="col"><img class="s1-img-right" src="assets/images/Try2.jpg" alt="" /></div>
-                </div>
-                <div class="row">
-                  <div class="col"><img class="s1-img-right" src="assets/images/Try1.jpg" alt="" /></div>
-                </div>
-              </div>
-              <div class="col-5">
-                <div class="row">
-                  <div class="col-6"><img class="s1-img-right" src="assets/images/Try2.jpg" alt="" /></div>
-                  <div class="col-6"><img class="s1-img-right" src="assets/images/Try1.jpg" alt="" /></div>
-                </div>
-                <div class="row">
-                  <div class="col"><img class="s1-img-right" src="assets/images/Try2.jpg" alt="" /></div>
-                </div>
-              </div>
-            </div> -->
