Contact page removed, join us page in progress

--- a/index.html
+++ b/index.html
@@ -85,10 +85,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link orange-navlink-divide" href="memberships.html">Memberships</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="memberships.html">Memberships</a>
             </li>
           </ul>
         </div>
@@ -161,7 +158,7 @@
         </div>
         <div class="location1">
           <div class="location-text-left">
-            <h1>Dublin City Center</h1>
+            <h1>Dublin Westmoreland</h1>
             <p>
               Size: small <br />
               Address: 15 Westmoreland Street <br />
@@ -174,12 +171,12 @@
         </div>
         <div class="location2">
           <div class="location-text-right">
-            <h1>Dublin City Center</h1>
+            <h1>Dublin Parnell</h1>
             <p>
               Size: medium <br />
-              Address: 15 Westmoreland Street <br />
-              Working hours: 8:00 - 20:00 <br />
-              Contact number: (01) 544 6721
+              Address: 8 Parnell Street <br />
+              Working hours: 7:00 - 21:00 <br />
+              Contact number: (01) 544 6722
             </p>
           </div>
           <img class="desktop-location-left" src="assets/images/orange-location.jpg" alt="" />
@@ -187,12 +184,12 @@
         </div>
         <div class="location3">
           <div class="location-text-left">
-            <h1>Dublin City Center</h1>
+            <h1>Dublin Merrion</h1>
             <p>
               Size: large <br />
-              Address: 15 Westmoreland Street <br />
-              Working hours: 8:00 - 20:00 <br />
-              Contact number: (01) 544 6721
+              Address: 37 Merrion Square <br />
+              Working hours: 6:00 - 23:00 <br />
+              Contact number: (01) 544 6723
             </p>
           </div>
           <img class="desktop-location-right" src="assets/images/yellow-location.jpg" alt="" />
