--- a/memberships.html
+++ b/memberships.html
@@ -42,10 +42,7 @@
             </li>
 
             <li class="nav-item active">
-              <a class="nav-link orange-navlink-divide" href="memberships.html">Memberships</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="memberships.html">Memberships</a>
             </li>
           </ul>
         </div>
