--- a/join.html
+++ b/join.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <!-- navbar -->
-      <nav class="navbar second-bg fixed-top navbar-expand-md navbar-light">
+      <nav class="navbar second-bg navbar-expand-md navbar-light">
         <a class="navbar-brand logo" href="index.html">
           <img src="assets/images/logo.png" alt="Gym logo" />
         </a>
@@ -42,16 +42,60 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link orange-navlink-divide" href="memberships.html">Memberships</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="memberships.html">Memberships</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <form class="container join-form">
+          <div class="row">
+            <div class="col-md-6">
+              <label for="fname">First name:</label> <br />
+              <input type="text" name="fname" id="fname" required />
+            </div>
+            <div class="col-md-6">
+              <label for="lname">Last name:</label> <br />
+              <input type="text" name="lname" id="lname" required />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <label for="email">Email address:</label> <br />
+              <input type="email" name="email" id="email" required />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <label for="password">Password:</label> <br />
+              <input type="password" name="password" id="password" required />
+            </div>
+          </div>
+          <p>Membership:</p>
+          <div class="row">
+            <div class="col-12 col-lg-4">
+              <label class="form-check-label" for="casual">Casual</label>
+              <input class="form-check-input" type="radio" name="membership" id="casual" value="casual" required />
+            </div>
+            <div class="col-12 col-lg-4">
+              <label class="form-check-label" for="moderate">Moderate</label>
+              <input class="form-check-input" type="radio" name="membership" id="moderate" value="moderate" />
+            </div>
+            <div class="col-12 col-lg-4">
+              <label class="form-check-label" for="king">King</label>
+              <input class="form-check-input" type="radio" name="membership" id="king" value="king" />
+            </div>
+          </div>
+          <br />
+          <button type="submit" class="btn">Send</button>
+        </form>
+      </section>
+      <section class="map">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=14VJitbClzEYCp__4uO8ru5flUHZ_egAU" width="640" height="480"></iframe>
+      </section>
+    </main>
     <footer>
       <section class="social-media">
         <div class="group">
