--- a/join.html
+++ b/join.html
@@ -48,15 +48,15 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="join-position">
       <section>
         <form class="container join-form">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-6 col-sm-12">
               <label for="fname">First name:</label> <br />
               <input type="text" name="fname" id="fname" required />
             </div>
-            <div class="col-md-6">
+            <div class="col-6 col-sm-12">
               <label for="lname">Last name:</label> <br />
               <input type="text" name="lname" id="lname" required />
             </div>
@@ -75,29 +75,33 @@
           </div>
           <p>Membership:</p>
           <div class="row">
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-sm-4">
               <label class="form-check-label" for="casual">Casual</label>
               <input class="form-check-input" type="radio" name="membership" id="casual" value="casual" required />
             </div>
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-sm-5">
               <label class="form-check-label" for="moderate">Moderate</label>
               <input class="form-check-input" type="radio" name="membership" id="moderate" value="moderate" />
             </div>
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-sm-3">
               <label class="form-check-label" for="king">King</label>
               <input class="form-check-input" type="radio" name="membership" id="king" value="king" />
             </div>
           </div>
           <br />
-          <button type="submit" class="btn">Send</button>
+          <div class="row">
+            <div class="col">
+              <button type="submit" class="btn">Send</button>
+            </div>
+          </div>
         </form>
       </section>
       <section class="map">
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=14VJitbClzEYCp__4uO8ru5flUHZ_egAU" width="640" height="480"></iframe>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=14VJitbClzEYCp__4uO8ru5flUHZ_egAU" width="544" height="408"></iframe>
       </section>
     </main>
     <footer>
-      <section class="social-media">
+      <section class="social-media reduced-margin">
         <div class="group">
           <h1>Stay in touch</h1>
           <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
