Footer added to collapsable nav on main menu, nav height adjusted on other pages.

--- a/join.html
+++ b/join.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <!-- navbar -->
-      <nav class="navbar second-bg navbar-expand-md navbar-light">
+      <nav class="navbar  second-bg navbar-expand-md navbar-light">
         <a class="navbar-brand logo" href="index.html">
           <img src="assets/images/logo.png" alt="Gym logo" />
         </a>
@@ -35,7 +35,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse load-fix navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse load-fix navbar-collapse medium-height" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link orange-navlink-divide" href="join.html">Join us</a>
@@ -44,6 +44,7 @@
             <li class="nav-item">
               <a class="nav-link" href="memberships.html">Memberships</a>
             </li>
+            
           </ul>
         </div>
       </nav>
