--- a/index.html
+++ b/index.html
@@ -78,14 +78,19 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse load-fix navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse load-fix navbar-collapse max-height" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link orange-navlink-divide" href="join.html">Join us</a>
             </li>
-
             <li class="nav-item">
               <a class="nav-link" href="memberships.html">Memberships</a>
+            </li>
+            <li class="footer-collapse">
+                <h1>Stay in touch</h1>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
             </li>
           </ul>
         </div>
@@ -274,9 +279,9 @@
       <section class="social-media">
         <div class="group">
           <h1>Stay in touch</h1>
-          <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-          <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
       </section>
       <section class="copyright">
