--- a/memberships.html
+++ b/memberships.html
@@ -35,7 +35,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse load-fix navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse load-fix navbar-collapse medium-height" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link orange-navlink-divide" href="join.html">Join us</a>
@@ -44,6 +44,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="memberships.html">Memberships</a>
             </li>
+            
           </ul>
         </div>
       </nav>
