Spell check done, membership headline added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <p>Try out our gym equipment for a day, no comitments. Just fill out the form below and you're all set.</p>
+            <p>Try out our gym equipment for a day, no commitments. Just fill out the form below and you're all set.</p>
             <hr class="modal-hr" />
           </div>
 
@@ -126,7 +126,7 @@
                 We are a newly opened gym with high quality equipment in three Dublin locations. You are welcome regardless of skill level.
                 Our dedicated team will be there to help you with anything you need. There also is an option to receive a more personalised
                 nutritional and workout plan from our expert personal trainers. Your membership includes access to any of our gyms. Come
-                visit _location_ which is our biggest location with a swimming pool. It's a great way to relax after a workout. If you are
+                visit our Merrion Square gym which is our biggest location with a swimming pool. It's a great way to relax after a workout. If you are
                 unsure, just book a free training and see how you like our gym experience.
               </p>
             </div>
@@ -218,7 +218,7 @@
               <div class="text double-border1">
                 <h1>Anna</h1>
                 <p>
-                  The personnel in King Gym is friendly and helpful. I have been given a personalised training scedule. As a beginner, that
+                  The personnel in King Gym is friendly and helpful. I have been given a personalised training schedule. As a beginner, that
                   helped getting past the initial confusion of where to start.
                 </p>
               </div>
@@ -231,7 +231,7 @@
                 <h1>Jim</h1>
                 <p>
                   King Gym is the best gym I have ever visited. It has all the equipment that you could ever need. Forget waiting for
-                  someone to finnish their set. The _location_ even has a pool which is a great way to relax after a workout.
+                  someone to finish their set. There are three locations in different parts of city center which is convenient.
                 </p>
               </div>
             </div>
