--- a/memberships.html
+++ b/memberships.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <!-- navbar -->
-      <nav class="navbar second-bg fixed-top navbar-expand-md navbar-light">
+      <nav class="navbar second-bg navbar-expand-md navbar-light">
         <a class="navbar-brand logo" href="index.html">
           <img src="assets/images/logo.png" alt="Gym logo" />
         </a>
@@ -49,7 +49,14 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+        <div class="headline-scale">
+          <h1 class="membership-headline">
+            <span>M</span>emberships
+            <img class="tricolor membership-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
+          </h1>
+        </div>
+    </main>
     <footer>
       <section class="social-media">
         <div class="group">
