--- a/memberships.html
+++ b/memberships.html
@@ -51,10 +51,53 @@
     </header>
     <main>
         <div class="headline-scale">
-          <h1 class="membership-headline">
+            <h1 class="membership-headline">
             <span>M</span>emberships
             <img class="tricolor membership-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
-          </h1>
+            </h1>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card" style="width: 14rem;">
+                        <img class="card-img-top" src="assets/images/Casual.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p>€9,99</p>
+                            <h1 class="card-title">Casual</h1>
+                            <p class="card-text">3 times per week</p>
+                            <p class="card-text">Classes <i class="fas fa-times"></i></p>
+                            <p class="card-text">Consultation <i class="fas fa-times"></i></p>
+                            <a href="#" class="btn btn-primary">Join</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 14rem;">
+                        <img class="card-img-top" src="assets/images/Casual.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p>€9,99</p>
+                            <h1 class="card-title">Casual</h1>
+                            <p class="card-text">3 times per week</p>
+                            <p class="card-text">Classes <i class="fas fa-times"></i></p>
+                            <p class="card-text">Consultation <i class="fas fa-times"></i></p>
+                            <a href="#" class="btn btn-primary">Join</a>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col">
+                    <div class="card" style="width: 14rem;">
+                        <img class="card-img-top" src="assets/images/Casual.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p>€9,99</p>
+                            <h1 class="card-title">Casual</h1>
+                            <p class="card-text">3 times per week</p>
+                            <p class="card-text">Classes <i class="fas fa-times"></i></p>
+                            <p class="card-text">Consultation <i class="fas fa-times"></i></p>
+                            <a href="#" class="btn btn-primary">Join</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
