Membership page finished, fully responsive. Images scaled down.

--- a/join.html
+++ b/join.html
@@ -1,128 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training."
-    />
+    <meta name="description"
+        content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/69b2179d00.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>King Gym</title>
-  </head>
-  <body>
-    <header>
-      <!-- navbar -->
-      <nav class="navbar  second-bg navbar-expand-md navbar-light">
-        <a class="navbar-brand logo" href="index.html">
-          <img src="assets/images/logo.png" alt="Gym logo" />
-        </a>
-        <button
-          class="navbar-toggler toggler-bg-color"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse load-fix navbar-collapse medium-height" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link orange-navlink-divide" href="join.html">Join us</a>
-            </li>
+</head>
 
-            <li class="nav-item">
-              <a class="nav-link" href="memberships.html">Memberships</a>
-            </li>
-            
-          </ul>
-        </div>
-      </nav>
+<body>
+    <header>
+        <!-- navbar -->
+        <nav class="navbar  second-bg navbar-expand-md navbar-light">
+            <a class="navbar-brand logo" href="index.html">
+                <img src="assets/images/logo.png" alt="Gym logo" />
+            </a>
+            <button class="navbar-toggler toggler-bg-color" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse load-fix navbar-collapse medium-height" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link orange-navlink-divide" href="join.html">Join us</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="memberships.html">Memberships</a>
+                    </li>
+
+                </ul>
+            </div>
+        </nav>
     </header>
     <main class="join-position">
-      <section>
-        <form class="container join-form">
-          <div class="row">
-            <div class="col-6 col-sm-12">
-              <label for="fname">First name:</label> <br />
-              <input type="text" name="fname" id="fname" required />
-            </div>
-            <div class="col-6 col-sm-12">
-              <label for="lname">Last name:</label> <br />
-              <input type="text" name="lname" id="lname" required />
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <label for="email">Email address:</label> <br />
-              <input type="email" name="email" id="email" required />
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <label for="password">Password:</label> <br />
-              <input type="password" name="password" id="password" required />
-            </div>
-          </div>
-          <p>Membership:</p>
-          <div class="row">
-            <div class="col-12 col-sm-4">
-              <label class="form-check-label" for="casual">Casual</label>
-              <input class="form-check-input" type="radio" name="membership" id="casual" value="casual" required />
-            </div>
-            <div class="col-12 col-sm-5">
-              <label class="form-check-label" for="moderate">Moderate</label>
-              <input class="form-check-input" type="radio" name="membership" id="moderate" value="moderate" />
-            </div>
-            <div class="col-12 col-sm-3">
-              <label class="form-check-label" for="king">King</label>
-              <input class="form-check-input" type="radio" name="membership" id="king" value="king" />
-            </div>
-          </div>
-          <br />
-          <div class="row">
-            <div class="col">
-              <button type="submit" class="btn">Send</button>
-            </div>
-          </div>
-        </form>
-      </section>
-      <section class="map">
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=14VJitbClzEYCp__4uO8ru5flUHZ_egAU" width="544" height="408"></iframe>
-      </section>
+        <section>
+            <form class="container join-form">
+                <div class="row">
+                    <div class="col-6 col-sm-12">
+                        <label for="fname">First name:</label> <br />
+                        <input type="text" name="fname" id="fname" required />
+                    </div>
+                    <div class="col-6 col-sm-12">
+                        <label for="lname">Last name:</label> <br />
+                        <input type="text" name="lname" id="lname" required />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <label for="email">Email address:</label> <br />
+                        <input type="email" name="email" id="email" required />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <label for="password">Password:</label> <br />
+                        <input type="password" name="password" id="password" required />
+                    </div>
+                </div>
+                <p>Membership:</p>
+                <div class="row">
+                    <div class="col-12 col-sm-4">
+                        <label class="form-check-label" for="casual">Casual</label>
+                        <input class="form-check-input" type="radio" name="membership" id="casual" value="casual"
+                            required />
+                    </div>
+                    <div class="col-12 col-sm-5">
+                        <label class="form-check-label" for="moderate">Moderate</label>
+                        <input class="form-check-input" type="radio" name="membership" id="moderate" value="moderate" />
+                    </div>
+                    <div class="col-12 col-sm-3">
+                        <label class="form-check-label" for="king">King</label>
+                        <input class="form-check-input" type="radio" name="membership" id="king" value="king" />
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col">
+                        <button type="submit" class="btn">Send</button>
+                    </div>
+                </div>
+            </form>
+        </section>
+        <section class="map">
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=14VJitbClzEYCp__4uO8ru5flUHZ_egAU" width="544"
+                height="408"></iframe>
+        </section>
     </main>
     <footer>
-      <section class="social-media reduced-margin">
-        <div class="group">
-          <h1>Stay in touch</h1>
-          <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-          <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+        <div class="social-media reduced-margin">
+            <div class="group">
+                <h1>Stay in touch</h1>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+            </div>
         </div>
-      </section>
-      <section class="copyright">
-        <p>© 2020 - King Gym All Rights Reserved</p>
-      </section>
+        <div class="copyright">
+            <p>© 2020 - King Gym All Rights Reserved</p>
+        </div>
     </footer>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
