--- a/memberships.html
+++ b/memberships.html
@@ -1,99 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training."
-    />
+    <meta name="description"
+        content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/69b2179d00.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>King Gym</title>
-  </head>
-  <body>
-    <header>
-      <!-- navbar -->
-      <nav class="navbar second-bg navbar-expand-md navbar-light">
-        <a class="navbar-brand logo" href="index.html">
-          <img src="assets/images/logo.png" alt="Gym logo" />
-        </a>
-        <button
-          class="navbar-toggler toggler-bg-color"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse load-fix navbar-collapse medium-height" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link orange-navlink-divide" href="join.html">Join us</a>
-            </li>
+</head>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="memberships.html">Memberships</a>
-            </li>
-            
-          </ul>
-        </div>
-      </nav>
+<body>
+    <header>
+        <!-- navbar -->
+        <nav class="navbar second-bg navbar-expand-md navbar-light">
+            <a class="navbar-brand logo" href="index.html">
+                <img src="assets/images/logo.png" alt="Gym logo" />
+            </a>
+            <button class="navbar-toggler toggler-bg-color" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse load-fix navbar-collapse medium-height" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link orange-navlink-divide" href="join.html">Join us</a>
+                    </li>
+
+                    <li class="nav-item active">
+                        <a class="nav-link" href="memberships.html">Memberships</a>
+                    </li>
+
+                </ul>
+            </div>
+        </nav>
     </header>
     <main>
         <div class="headline-scale">
             <h1 class="membership-headline">
-            <span>M</span>emberships
-            <img class="tricolor membership-tricolor" src="assets/images/tricolor_underline.jpg" alt="Headline underline" />
+                <span>M</span>emberships
+                <img class="tricolor membership-tricolor" src="assets/images/tricolor_underline.jpg"
+                    alt="Headline underline" />
             </h1>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="card" style="width: 14rem;">
-                        <img class="card-img-top" src="assets/images/Casual.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <p>€9,99</p>
-                            <h1 class="card-title">Casual</h1>
-                            <p class="card-text">3 times per week</p>
-                            <p class="card-text">Classes <i class="fas fa-times"></i></p>
-                            <p class="card-text">Consultation <i class="fas fa-times"></i></p>
-                            <a href="#" class="btn btn-primary">Join</a>
+        <div class="container-fluid">
+            <div class="row membership-row ">
+                <div class="col-md-12 col-lg-4 membership-scale">
+                    <div class="center">
+                        <img class="membership-img" src="assets/images/casual.jpg" alt="">
+                        <div class="membership-container membership-border-casual ">
+                            <p class="casual price">€9,99</p>
+                            <h1 class="casual">Casual</h1>
+                            <p>3 times per week</p>
+                            <p>Classes <i class="fas fa-times"></i></p>
+                            <p>Consultation <i class="fas fa-times"></i></p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card" style="width: 14rem;">
-                        <img class="card-img-top" src="assets/images/Casual.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <p>€9,99</p>
-                            <h1 class="card-title">Casual</h1>
-                            <p class="card-text">3 times per week</p>
-                            <p class="card-text">Classes <i class="fas fa-times"></i></p>
-                            <p class="card-text">Consultation <i class="fas fa-times"></i></p>
-                            <a href="#" class="btn btn-primary">Join</a>
+                <div class="col-md-6 col-lg-4 membership-scale ">
+                    <div class="center">
+                        <img class="membership-img" src="assets/images/moderate.jpg" alt="">
+                        <div class="membership-container membership-border-moderate ">
+                            <p class="moderate price">€18,99</p>
+                            <h1 class="moderate">Moderate</h1>
+                            <p>5 times per week</p>
+                            <p>Classes <i class="fas fa-check"></i></p>
+                            <p>Consultation <i class="fas fa-times"></i></p>
                         </div>
                     </div>
                 </div>
-                 <div class="col">
-                    <div class="card" style="width: 14rem;">
-                        <img class="card-img-top" src="assets/images/Casual.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <p>€9,99</p>
-                            <h1 class="card-title">Casual</h1>
-                            <p class="card-text">3 times per week</p>
-                            <p class="card-text">Classes <i class="fas fa-times"></i></p>
-                            <p class="card-text">Consultation <i class="fas fa-times"></i></p>
-                            <a href="#" class="btn btn-primary">Join</a>
+                <div class="col-md-6 col-lg-4 membership-scale">
+                    <div class="center">
+                        <img class="membership-img" src="assets/images/king.jpg" alt="">
+                        <div class="membership-container membership-border-king ">
+                            <p class="king price">€25,99</p>
+                            <h1 class="king">King</h1>
+                            <p>Unlimited</p>
+                            <p>Classes <i class="fas fa-check"></i></p>
+                            <p>Consultation <i class="fas fa-check"></i></p>
                         </div>
                     </div>
                 </div>
@@ -101,27 +89,24 @@
         </div>
     </main>
     <footer>
-      <section class="social-media">
-        <div class="group">
-          <h1>Stay in touch</h1>
-          <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-          <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+        <div class="social-media">
+            <div class="group">
+                <h1>Stay in touch</h1>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+            </div>
         </div>
-      </section>
-      <section class="copyright">
-        <p>© 2020 - King Gym All Rights Reserved</p>
-      </section>
+        <div class="copyright">
+            <p>© 2020 - King Gym All Rights Reserved</p>
+        </div>
     </footer>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
